Fri Aug 12 15:49:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/describecol.c:
	* src/odbc/unittests/describecol.in:
	- improve describecol test for ms date/time

Fri Aug 12 15:33:59 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c:
	- check correct protocol for ms date/time -> binary tests

Fri Aug 12 14:30:56 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/sql2tds.c: support ms date/time putting data in odbc

Fri Aug 12 14:25:38 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c:
	- support conversions from new ms date/time to binary

Fri Aug 12 13:51:49 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/tds/net.c:
	- check for gnutls_record_disable_padding function

Fri Aug 12 11:17:16 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: test for pthread_cond_timedwait

Thu Aug 11 12:07:56 EDT 2011	JK Lowden <jklowden@freetds.org>
	* doc/tsql.txt updated for clarity and -D

Thu Aug 11 14:50:33 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/tds/convert.c:
	- clear output buffer in tds_datecrack

Thu Aug 11 11:38:02 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c: check len returned by SQLGetData

Thu Aug 11 09:51:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c: test splitting fields for "n" types

Thu Aug 11 09:07:19 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: improve test for ms date/time

Thu Aug 11 09:05:49 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: consider time offset in tds_datecrack

Thu Aug 11 09:02:43 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: avoid c++ comments

Thu Aug 11 09:01:33 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: small tds_datecrack fix
