@@ -1,3 +1,7 @@
+Fri Aug 12 18:38:45 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tds.h src/tds/config.c src/tds/gssapi.c src/tds/mem.c:
+	- add Kerberos realm parameter to connection
+
 Fri Aug 12 15:49:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/unittests/describecol.c:
 	* src/odbc/unittests/describecol.in:
@@ -751,4 +755,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3377 2011-08-12 13:49:54 freddy77 Exp $
+$Id: ChangeLog,v 1.3378 2011-08-12 16:38:32 freddy77 Exp $
